fixed the overflow issues and added test

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,5 +1,8 @@
 @import "tailwind";
 
+*{
+    overflow-x: hidden;
+}
 // @layer components {
 // 	.topbar_link{
 // 		@apply w-fit px-4 py-3 rounded-md bg-neutral9 text-sm text-white flex items-center justify-center disabled:bg-neutral3 disabled:cursor-not-allowed 
